# WeatherApp

./: README.md  main.py  pyproject.toml
app_requests/: api_requests.py
