[tool.poetry]
name = "weatherapp"
version = "0.1.0"
description = ""
authors = ["RachelShrikiMor <rachelmorhin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.47.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
