[tool.poetry]
name = "weatherapp"
version = "0.1.0"
description = ""
authors = ["RachelShrikiMor <rachelmorhin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.47.0"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
